--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
 
+<html>
+<head>
+    <title>Assignment 4</title>
+    <link rel="stylesheet" href="styles/assignment4.css">
+    <script type="text/javascript" src="js/assignment4.js"></script>
+</head>
+
+<body>
+<div id="bg">
+    <div id="title">
+        <hr>
+        <h1>
+            Assignment 4 - Space Vs Nature
+        </h1>
+        <hr>
+    <select id="selector">
+        <option id="show1" onclick="toggleSection1();" onclick="ClearToggle2();">Learn more about Space</option>
+        <option id="show2" onclick="toggleSection2();" onclick="ClearToggle1();">Learn more about Nature</option>
+    </select>
+    <hr>
+    
+    <section id="area1">
+        <img id="picture" src="images/space.jpg">
+        <h1>
+            Space - The vast expanse of area that encompasses the cosmos.
+        </h1>
+    </section>
+    <section id="area2">
+        <img id="picture" src="images/tree.jpg">
+        <h1>
+            Nature - The beautiful and intricate mass of living things.
+        </h1>
+    </section>
+
+
+    <footer id="foot">
+        <p>Created by: <a href="mailto:cr9204@gmail.com">Cory Rochester</a></p>
+    </footer>
+    </div>
+ </div>
+</body>
+</html>
